tests/ui/rust-2024/reserved-guarded-strings-lexing.stderr
error: prefix `Ñ` is unknown
  --> $DIR/reserved-guarded-strings-lexing.rs:70:12
   |
LL |     demo2!(Ñ"foo");
   |            ^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo2!(Ñ "foo");
   |             +

error: prefix `Ñ` is unknown
  --> $DIR/reserved-guarded-strings-lexing.rs:72:12
   |
LL |     demo4!(Ñ#""#);
   |            ^ unknown prefix
   |
   = note: prefixed identifiers and literals are reserved since Rust 2021
help: consider inserting whitespace here
   |
LL |     demo4!(Ñ #""#);
   |             +

error: identifiers cannot contain emoji: `🙃`
  --> $DIR/reserved-guarded-strings-lexing.rs:76:12
   |
LL |     demo3!(🙃#"");
   |            ^^

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:28:12
   |
LL |     demo3!(## "foo");
   |            ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
note: the lint level is defined here
  --> $DIR/reserved-guarded-strings-lexing.rs:4:9
   |
LL | #![warn(rust_2024_guarded_string_incompatible_syntax)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo3!(# # "foo");
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:31:12
   |
LL |     demo4!(### "foo");
   |            ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo4!(# ## "foo");
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:31:13
   |
LL |     demo4!(### "foo");
   |             ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo4!(## # "foo");
   |              +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:36:12
   |
LL |     demo4!(## "foo"#);
   |            ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo4!(# # "foo"#);
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:39:12
   |
LL |     demo7!(### "foo"###);
   |            ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo7!(# ## "foo"###);
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:39:13
   |
LL |     demo7!(### "foo"###);
   |             ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo7!(## # "foo"###);
   |              +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:39:21
   |
LL |     demo7!(### "foo"###);
   |                     ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo7!(### "foo"# ##);
   |                      +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:39:22
   |
LL |     demo7!(### "foo"###);
   |                      ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo7!(### "foo"## #);
   |                       +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:49:12
   |
LL |     demo5!(###"foo"#);
   |            ^^^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo5!(# ##"foo"#);
   |             +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:49:13
   |
LL |     demo5!(###"foo"#);
   |             ^^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo5!(## #"foo"#);
   |              +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:49:14
   |
LL |     demo5!(###"foo"#);
   |              ^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo5!(### "foo"#);
   |               +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:56:12
   |
LL |     demo5!(#"foo"###);
   |            ^^^^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo5!(# "foo"###);
   |             +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:56:18
   |
LL |     demo5!(#"foo"###);
   |                  ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo5!(#"foo"# ##);
   |                   +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:56:19
   |
LL |     demo5!(#"foo"###);
   |                   ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo5!(#"foo"## #);
   |                    +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:63:17
   |
LL |     demo4!("foo"###);
   |                 ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo4!("foo"# ##);
   |                  +

warning: reserved token in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:63:18
   |
LL |     demo4!("foo"###);
   |                  ^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a forbidden token in Rust 2024
   |
LL |     demo4!("foo"## #);
   |                   +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:72:13
   |
LL |     demo4!(Ñ#""#);
   |             ^^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo4!(Ñ# ""#);
   |              +

warning: will be parsed as a guarded string in Rust 2024
  --> $DIR/reserved-guarded-strings-lexing.rs:76:13
   |
LL |     demo3!(🙃#"");
   |              ^^^
   |
   = warning: this is accepted in the current edition (Rust 2021) but is a hard error in Rust 2024!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/reserved-syntax.html>
help: insert whitespace here to avoid this being parsed as a guarded string in Rust 2024
   |
LL |     demo3!(🙃# "");
   |               +

error: aborting due to 3 previous errors; 18 warnings emitted

